fix spacing

--- a/mptracker/static/less/website.less
+++ b/mptracker/static/less/website.less
@@ -1166,6 +1166,7 @@ figure {
 }
 
 .rightmenu {
+    margin-top: -10px;
     margin-bottom: 45px;
     > li {
         position: relative;
